# garbanzo

./: .gitignore  README.md  TODO.txt  pyproject.toml  ruff.toml
garbanzo/: config.py  ledger.py
garbanzo/app/: Garbanzo.py  utils.py
garbanzo/app/pages/: 1_Cash_Flows.py
